			std.checkName(string[, forceUppercaseOnFirstLetter = true])
			doSteerCreature(cid, position[, maxNodes])
			getCreaturePartyShield(cid[, target])
			doCreatureSetPartyShield(cid, shield)
			isValidPosition(position)
			isNumeric(str)
			getTotalGold(cid)
			doPlayerPay(cid, cost)
			unregisterCreatureEvent(cid, name)
			db.query(query) (previously known as db.executeQuery)
			db.stringComparer()
			db.connected()
			db.tableExists(name)
			db.transBegin()
			db.transRollback()
			db.transCommit()
			errors(var)
			getPlayerTradeState(cid)
			getPlayerModes(cid)
			getTownList()
			doPlayerFollowCreature(cid, target)
			doPlayerLeaveParty(cid[, forced = false])
		* Add new creature events onMoveItem(moveItem, frompos, position, cid). (Elf Tryller)
		* Add old quest system based on unique id (quests.lua). (Tryller)
		* Clean actions, movements and weapons scripts to work only with 7.9 items. (Tryller)
		* Players can buy house with gold in inventory and/or bank balance. (Tryller)
		* Auto stack items. (Elf)
		* Burst and Poison arrows using old formula. (Tryller)
		* Only mysql and sqlite support. (Tryller)
		* Fix isItemStackable and isItemFluidContainer based on hard coded instead of lua. (Tryller)
		* Fix stamina system with 56 hours instead of 42. (Tryller)
		* Fix PlayerCustomFlag_HasFullLight not working properly. (Tryller)
		* Replace getItemWeight(uid[, precise = true]) with new one getItemWeight(itemid, count, <optional: default: 1> precise). (Tryller)
		* Replace account name with account number. (Tryller)
		* Replace randomize ground with hard coded (need to be fixed). (Tryller)
		* Replace lua getItemNameById(itemid) with getItemName(itemid) compat. (Tryller)
		* Replace doNpcSellItem(cid, itemid, amount, subType, ignoreCap, inBackpacks, backpack) with doNpcSellItem(cid, itemid, count, cost). (Tryller)
		* Replace lua functions db.executeQuery(query) -> db.query, db.stringComparison() -> db.stringComparer() (Elf)