@@ -153,7 +153,7 @@
 			doPlayerPay(cid, cost)
 			unregisterCreatureEvent(cid, name)
 			db.query(query) (previously known as db.executeQuery)
-			db.stringComparer()
+			db.stringComparer() (previously known as stringComparison)
 			db.connected()
 			db.tableExists(name)
 			db.transBegin()
@@ -165,6 +165,10 @@
 			getTownList()
 			doPlayerFollowCreature(cid, target)
 			doPlayerLeaveParty(cid[, forced = false])
+			getItemParent(uid)
+			os.mtime()
+			getVocationList()
+			getGroupList()
 		* Add new creature events onMoveItem(moveItem, frompos, position, cid). (Elf Tryller)
 		* Add old quest system based on unique id (quests.lua). (Tryller)
 		* Clean actions, movements and weapons scripts to work only with 7.9 items. (Tryller)
